--- a/src/css/ticTacToe.css
+++ b/src/css/ticTacToe.css
@@ -5,10 +5,16 @@
     box-shadow: 0 0 2px rgba(0, 0, 0, .4);
     margin: 50px auto;
     max-width: 500px;
-    min-width: 200px;
+    min-width: 240px;
 }
 
 .board {
     background-color: bluePrimary;
+}
+
+.innerContainer {
+    width: 240px;
+    margin: 0 auto;
+    padding: 16px 0;
     position: relative;
 }
