--- a/src/css/winningLine.css
+++ b/src/css/winningLine.css
@@ -1,6 +1,6 @@
 .container {
     height: 240px;
-    left: 130px;
+    left: 0;
     position: absolute;
     top: 16px;
     width: 240px;
